feature: 成就系统实现-枫叶兑换，参考BMS四周年活动